force-app/main/default/objects/Client_Action_Required__c/fields/Client_Action_Notes__c.field-meta.xml
<CustomField>
    <fullName>Client_Action_Notes__c</fullName>
    <label>Client Action Notes</label>
    <type>TextArea</type>
</CustomField>