force-app/main/default/objects/Client_Action_Required__c/fields/Client_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Client_Instructions__c</fullName>
    <inlineHelpText>This field will be used word for word in the client&#39;s email update</inlineHelpText>
    <label>Client Instructions</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>