force-app/main/default/objects/Client_Action_Required__c/fields/Date_Client_Action_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>Date_Client_Action_Confirmed__c</fullName>
    <inlineHelpText>The date the client emails to confirm they have actioned our requested</inlineHelpText>
    <label>Date Client Action Confirmed</label>
    <type>Date</type>
</CustomField>