force-app/main/default/objects/Client_Action_Required__c/fields/Date_Last_Chased__c.field-meta.xml
<CustomField>
    <fullName>Date_Last_Chased__c</fullName>
    <label>Date Last Chased</label>
    <type>Date</type>
</CustomField>