force-app/main/default/objects/Client_Action_Required__c/fields/Date_Requested_from_Client__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested_from_Client__c</fullName>
    <label>Date Requested from Client</label>
    <type>Date</type>
</CustomField>