force-app/main/default/objects/Client_Action_Required__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On hold</fullName>
                <default>true</default>
                <label>On hold</label>
            </value>
            <value>
                <fullName>Client Notified and Chasing</fullName>
            </value>
            <value>
                <fullName>Action to be Reviewed</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>