force-app/main/default/objects/Client_Action_Required__c/fields/Thank_You_Email_Sent_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Thank_You_Email_Sent_to_Client__c</fullName>
    <label>Date Thank You Email Sent to Client</label>
    <type>Date</type>
</CustomField>