force-app/main/default/objects/Client_Action_Required__c/fields/What_we_expect_to_recieve__c.field-meta.xml
<CustomField>
    <fullName>What_we_expect_to_recieve__c</fullName>
    <label>What we expect to receive</label>
    <type>TextArea</type>
</CustomField>