force-app/main/default/objects/Client_Action_Required__c/recordTypes/Client_Information_Requested.recordType-meta.xml
<RecordType>
    <fullName>Client_Information_Requested</fullName>
    <active>true</active>
    <label>Client Information Requested</label>
</RecordType>