force-app/main/default/objects/Client_Action_Required__c/recordTypes/General.recordType-meta.xml
<RecordType>
    <fullName>General</fullName>
    <active>false</active>
    <label>General</label>
</RecordType>